# camellia

./: CMakeLists.txt  ChangeLog  README  cam_demo.c  cam_demo.vcproj  cam_demo_cpp.cpp  cam_myobjects.c  cam_myobjects.rb  cam_yalefaces.c  cam_yalefaces.rb  camellia.dsp  camellia.sln  camellia.vcproj  configure.in
doc/: camellia.dox
ext/: camellia-linux.gemspec  camellia-mswin32.gemspec  camellia_ruby.i  camellia_ruby_wrap.cxx  extconf.rb
inc/: camellia.h  camellia_internals.h
resources/: img7.pgm  img8.pgm
src/: CMakeLists.txt  Makefile.am  cam_3d.c  cam_3d_viewer.c  cam_RLE_labelling.c  cam_RLE_labelling_code.c  cam_RLE_morpho.c  cam_RLE_utils.c  cam_SAD.c  cam_arithmetics.c  cam_arithmetics_code.c  cam_capture.cpp  cam_draw.c  cam_error.c  cam_harris.c  cam_hls.c  cam_hough.c  cam_integralimage.c  cam_io.c  cam_keypoints.c  cam_keypoints_alt.c  cam_keypoints_descriptor.c  cam_keypoints_hessian_code.c  cam_keypoints_matching.c  cam_keypoints_recurs.c  cam_keypoints_tracker.c  cam_keypoints_tracker2.c  cam_kmeans.c  cam_linear_filtering_code.c  cam_morphomaths.c  cam_morphomaths_code_opt.c  cam_project_3d_to_2d.c  cam_separable_filter_code.c  cam_utils.c  cam_utils_code.c  cam_yuv.c  camellia.cpp
src/3d/: Makefile  TODO  cam_2d_points.h  cam_3d_point.h  cam_3d_points.h  cam_3d_points_loaders.c  cam_3d_points_loaders.h  cam_3d_viewer.c  cam_add_noise_to_points.c  cam_add_noise_to_points.h  cam_add_noise_to_points.h~  cam_epipoles.c  cam_epipoles.h  cam_evaluate_tracking.c  cam_evaluate_tracking.h  cam_generate_images_transformations.c  cam_interpolate_missing_image_data.c  cam_interpolate_missing_image_data.h  cam_list.c  cam_list.h  cam_matrix.c  cam_matrix.h  cam_matrix_to_pgm.c  cam_matrix_to_pgm.h  cam_matrix_to_points.c  cam_matrix_to_points.h  cam_matrix_to_ppm.c  cam_matrix_to_ppm.h  cam_p_from_f.c  cam_p_from_f.h  cam_pgm_to_matrix.c  cam_pgm_to_matrix.h  cam_pgm_to_points.c  cam_pgm_to_points.h  cam_points_to_matrix.c  cam_points_to_matrix.h  cam_points_to_pgm.c  cam_points_to_pgm.h  cam_points_to_ppm.c  cam_points_to_ppm.h  (+21 more)
src/3d/data/tracking/: img.ppm
